--- a/insert-logo.html
+++ b/insert-logo.html
@@ -1,6 +1,6 @@
 <style>
   .logo {
-    background-image: url('resources/logo-utilitr.png');
+    background-image: url('public/resources/logo-utilitr.png');
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
